--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
                          :style="isVertical ? { top: img.lineY + 'px' } : { left: img.lineX + 'px' }">
                     </div>
                     <div class="image-controls">
-                        <button class="btn btn-primary btn-sm me-1" @click="moveUp(index)" :disabled="index === 0">上移</button>
+                        <button class="btn btn-primary btn-sm me-1" @click="moveUp(index)" :disabled="index === 0">↑</button>
                         <button class="btn btn-primary btn-sm me-1" @click="moveDown(index)"
-                            :disabled="index === images.length - 1">下移</button>
-                        <button class="btn btn-danger btn-sm" @click="deleteImage(index)">删除</button>
+                            :disabled="index === images.length - 1">↓</button>
+                        <button class="btn btn-danger btn-sm" @click="deleteImage(index)">×</button>
                     </div>
                 </div>
             </div>
