--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <button class="btn btn-primary btn-sm me-1" @click="moveUp(index)" :disabled="index === 0">↑</button>
                         <button class="btn btn-primary btn-sm me-1" @click="moveDown(index)"
                             :disabled="index === images.length - 1">↓</button>
-                        <button class="btn btn-danger btn-sm" @click="deleteImage(index)">×</button>
+                        <button class="btn btn-danger btn-sm" @click="deleteImage(index)">x</button>
                     </div>
                 </div>
             </div>
